# home-assistant-mfi-mpower

./: README.md  pyproject.toml
custom_components/mfi_mpower/: __init__.py  api.py  config_flow.py  const.py  diagnostics.py  manifest.json  options_flow.py  schema.py  select.py  sensor.py  significant_change.py  strings.json  switch.py  update_coordinator.py  version.py
custom_components/mfi_mpower/translations/: de.json  en.json
